# ArbitraryPrecisionCalculator

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win
data/: input.txt  input2.txt  input3.txt
doc/tex/: analyza.tex  dokumentace.tex  implementace.tex  literatura.tex  prirucka.tex  title.tex  zadani.tex  zaver.tex
src/: array_list.c  array_list.h  calc.c  linked_list.c  linked_list.h  main.c  mpt.h  multiple_precision_operations.c  multiple_precision_operations.h  multiple_precision_parsing.c  multiple_precision_parsing.h  multiple_precision_printing.c  multiple_precision_printing.h  multiple_precision_type.c  multiple_precision_type.h  operators.c  operators.h  shunting_yard.c  shunting_yard.h  tests.c  vector.c  vector.h
src/data_structures/: conversion.c  conversion.h  convert.c  convert.h  stack.c  stack.h  vector.c  vector.h
src/mpt/: mpt.h  multiple_precision_operations.c  multiple_precision_operations.h  multiple_precision_parsing.c  multiple_precision_parsing.h  multiple_precision_printing.c  multiple_precision_printing.h  multiple_precision_type.c  multiple_precision_type.h
src/stack/: stack.c  stack.h
